<resources>
    <string name="app_name">MoviesEBS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_search">Search</string>
    <string name="write_a_review">Write a review</string>
    <string name="how_would_you_rate_this_movie">How would you rate this movie?</string>
    <string name="give_a_title">Give a title</string>
    <string name="title_hint">Title</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="write_your_review_button">Write your review</string>
    <string name="submit_button">Submit</string>
    <string name="no_internet_conection">No Internet connection</string>
    <string name="no_reviews">No reviews</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="thansk_for_your_review">Thanks for your review</string>
</resources>